# simhash-demo

./: CMakeLists.txt  LICENSE  README.md  demo.cpp
.github/workflows/: cmake.yml
